--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "repository": "https://github.com/camondoni/coodesh-space-flight",
   "author": "Caio <caio.mondoni@mypocketpay.com>",
   "license": "MIT",
-  "type": "module",
+  "type" : "module",
   "scripts": {
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts"
+    "start": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.17.12",
+    "@babel/preset-env": "^7.18.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/mongoose": "^5.11.97",
     "@types/reflect-metadata": "^0.1.0",
     "@types/uuid": "^8.3.4",
     "babel": "^6.23.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jest": "^28.1.0",
@@ -28,12 +31,14 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8"
   }
 }
