--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/camondoni/coodesh-space-flight",
   "author": "Caio <caio.mondoni@mypocketpay.com>",
   "license": "MIT",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "test": "jest"
@@ -14,18 +14,28 @@
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.17.12",
     "@babel/preset-env": "^7.18.0",
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/mongoose": "^5.11.97",
+    "@types/node-schedule": "^2.1.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
     "babel": "^6.23.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jest": "^28.1.0",
     "mongoose": "^6.3.3",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.5",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.4.0",
     "tsyringe": "^4.6.0",
     "typescript": "^4.6.4",
     "uuid": "^8.3.2"
