--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 version: '3.1'
 services:
   mongo:
+    container_name: mongodb
     image: mongo
     restart: always
     ports:
-      - 8081:8081
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: camondoni
-      MONGO_INITDB_ROOT_PASSWORD: Exi9064$$!!
+      MONGO_INITDB_ROOT_PASSWORD: Exi9064!!
+  node:
+    container_name: node
+    image: "node:alpine"
+    user: "node"
+    working_dir: /home/node/app   
+    volumes:
+      - ./:/home/node/app
+    ports:
+      - "3000:3000"
+    command: "yarn start"
+ 
