--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "scripts": {
     "start": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "sync" : "ts-node-dev ./src/modules/articles/useCases/synchronizeArticles/SynchronizeArticlesUseCase.ts"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.17.12",
